# InfantHealthRisk

./: .gitignore  README.md
api/: .env  README.md  pyproject.toml  render.yaml  requirements.txt
api/app/: main.py
api/app/core/: config.py
api/app/db/: mongo_db.py
api/app/exports/: My_Prediction_History_20260217030355.xlsx  My_Prediction_History_20260217030838.xlsx  bulk_predictions_20251222_105434.xlsx
api/app/models/: feature_order.pkl  health_model.pkl
api/app/schemas/: request.py  user.py
api/app/serializers/: user_serializer.py
api/app/services/: auth.py  inference.py  risk_mapping.py
api/app/utils/: bulk_upload.py  excel_export.py  otp.py
api/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
api/catboost_info/learn/: events.out.tfevents
api/data/: newborn_health_monitoring_with_risk.csv
api/scripts/: server.py  test.py  train.py
api/testing/: test_model.py
api/training/: train_models.py
client/: app.json  cesconfig.jsonc  package-lock.json  package.json
client/app/: globals.css  page.tsx
client/components/: AuthForm.tsx  InputFiled.tsx
client/services/: auth.service.ts  predict.service.ts
client/src/: proxy.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/(withMainLayout)/: layout.tsx
client/src/components/common/: InputFiled.tsx
client/src/components/constants/: sidebarUrls.tsx
client/src/schemas/: predictValidator.ts
client/src/services/: auth.service.ts  axios.ts  predict.service.ts
client/src/store/: userStore.ts
client/src/types/: auth.ts  zustandStore.ts
client/store/: userStore.ts
(+8 files in other folders)
